# stm32f303motor

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  stm32f303motor.ioc
Core/Inc/: main.h  stm32f3xx_it.h
Core/Src/: main.c  stm32f3xx_it.c
User/: adc_task.cpp  encoder_task.cpp  gpio.hpp  key_task.cpp  motor_task.cpp  task_resource.h
doc/: pin_assign.xlsx
